# MPI-WordsCount

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: Adventures of Huckleberry Finn  Alice's adventures in wonderland  Dracula  Frankenstein  Little Women  Metamorphosis  Moby Dick  Oliver Twist  Paradise Lost  Peter Pan  The Iliad  The Odyssey  The Scarlet Letter  The Wonderful Wizard of Oz  The adventures of Sherlock Holmes  The picture of Dorian Grey  Treasure Island  Ulysses  War and peace
include/: counter.h  fileloader.h  logger.h  mpiwordsmap.h  mpiworkloads.h  wordsmap.h  workloads.h
scripts/: runsstests.sh  runtests.sh  runwstests.sh  scpfiles.sh
src/: counter.c  fileloader.c  logger.c  main.c  mpiwordsmap.c  mpiworkloads.c  wordsmap.c  workloads.c
